--- a/website/Templates/index.html
+++ b/website/Templates/index.html
@@ -82,7 +82,7 @@
               <div class="card project-progress">
                 <h2 class="display h4">Type of all devices</h2>
                 <div class="pie-chart">
-                  <canvas id="pieChart"  width="300" height="300">{{ dev }}.{{ count_dev }}</canvas>
+                  <canvas id="pieChart"  width="300" height="300">{{ model }}.{{ count_model }}</canvas>
                 </div>
               </div>
             </div>
