--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Register | Smart Network Controller System</title>
+    <title>Bootstrap Dashboard by Bootstrapious.com</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -24,7 +24,7 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="/static/css/custom.css">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/logo.png">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -34,27 +34,46 @@
       <div class="container">
         <div class="form-outer text-center d-flex align-items-center">
           <div class="form-inner">
-            <div class="logo text-uppercase"><span>Smart Network</span><strong class="text-primary"> Controller System</strong></div>
+            <div class="logo text-uppercase"><span>SMART NETWORK</span><strong class="text-primary"> CONTROLLER SYSTEM</strong></div>
             <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>-->
-            <form id="register-form">
-              <div class="form-group-material">
-                <input id="register-username" type="text" name="registerUsername" required class="input-material">
-                <label for="register-username" class="label-material">Username</label>
+            <form action="{% url 'accounts:login' %}" method="post">
+                {% csrf_token %}
+                {{ form }}
+                {% if request.GET.next %}
+                    <input type="hidden" name="next" value="{{ request.GET.next }}">
+                {% endif %}
+                <input type="submit" value="Login" class="btn btn-primary">
+              <!--<div class="form-group-material">
+                <input id="login-username" type="text" name="loginUsername" required class="input-material">
+                <label for="login-username" class="label-material">Username</label>
               </div>
               <div class="form-group-material">
-                <input id="register-email" type="email" name="registerEmail" required class="input-material">
-                <label for="register-email" class="label-material">Email Address      </label>
+                <input id="login-password" type="password" name="loginPassword" required class="input-material">
+                <label for="login-password" class="label-material">Password</label>
               </div>
-              <div class="form-group-material">
-                <input id="register-passowrd" type="password" name="registerPassword" required class="input-material">
-                <label for="register-passowrd" class="label-material">Password        </label>
-              </div>
-              <div class="terms-conditions d-flex justify-content-center">
-                <input id="license" type="checkbox" class="form-control-custom">
-                <label for="license">Agree the terms and policy</label>
-              </div>
-              <input id="register" type="submit" value="Register" class="btn btn-primary">
-            </form><small>Already have an account? </small><a href="login.html" class="signup">Login</a>
+              <button id="login" type="submit" class="btn btn-primary">Login</button>-->
+              <!-- This should be submit button but I replaced it with <a> for demo purposes-->
+            </form>
+            <script type="text/javascript">
+                $(document).on('submit', '#logid-form', function (e) {
+                    e.preventDefault()
+
+                    $.ajax({
+                        type: 'POST',
+                        url: "/commandLine/{{ sn }}/",
+                        data: {
+                            command: $('#myInput').val(),
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                        },
+
+                        success: function (json) {
+                            $('#myTextarea').html(data.value+'\n'+json.message);
+                        }
+                    })
+
+                })
+            </script>  
+              <a href="#" class="forgot-pass">Forgot Password?</a><small>Do not have an account? </small><a href="../../../website/Templates/account/register.html" class="signup">Signup</a>
           </div>
           <div class="copyrights text-center">
             <p>Design by <a href="https://bootstrapious.com" class="external">Bootstrapious</a></p>
