--- a/website/Templates/node_detail.html
+++ b/website/Templates/node_detail.html
@@ -102,7 +102,7 @@
                         <tr>
                           <td>Fan</td>
                           <td>
-                              {% if fan == 'OK' %}
+                              {% if fan == 'OK' and det.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -112,7 +112,7 @@
                         <tr>
                           <td>Power Supply</td>
                           <td>
-                              {% if power == 'OK' %}
+                              {% if power == 'OK' and det.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -122,7 +122,7 @@
                         <tr>
                           <td>Temperature</td>
                           <td>
-                              {% if temp == 'OK' %}
+                              {% if temp == 'OK' and det.status == 'Up' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -136,6 +136,7 @@
               </div>
             </div>
           </div>
+          {% if det.status == 'Up' %}
           <header>
             <h1 class="h3 display">Configuration</h1>
           </header>
@@ -144,13 +145,14 @@
                     <div class="card-body">
                         <div class="form-group row">
                           <div class="col-sm-4 offset-sm-4">
-                            <a href="/d1config/{{ var1 }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
+                            <a href="/config/{{ var1 }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
                             <a href="/commandLine/{{ var1 }}"><button type="submit" class="btn btn-secondary">Command line</button></a>
                           </div>
                         </div>
                     </div>
                 </div>
           </div>
+          {% endif %}
         </div>
     </section>
 {% endblock %}
