--- a/website/Templates/rack_detail.html
+++ b/website/Templates/rack_detail.html
@@ -19,14 +19,14 @@
                 <h1 class="h3 display">Controller</h1>
             </header>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4" style="padding-left: 0px;">
                   <div class="card">
                     <div class="card-header d-flex align-items-center">
                       <h5>Rack Detail</h5>
                     </div>
                     <div class="card-body">
                         <ul>
-                            <span><strong>Hostname : </strong>{{ host_rpi }}</span><br><br>
+                            <span><strong>Hostname : </strong>{{ controller }}</span><br><br>
                             <span><strong>IP Address : </strong>{{ ip_rpi }}</span>
                         </ul>
                         <div class="line"></div>
@@ -34,10 +34,20 @@
                             <span><strong>Network device connected</strong></span><br>
                             {% for i in sn_nd %}
                                 <ul>
-                                    <li><a href="/node_detail/{{ ip_rpi }}/{{ i.ser_num }}">{{ i.ser_num }}</a></li>
+                                    <li><a href="/node_detail/{{ ip_rpi }}/{{ i.ser_num }}">{{ i.hostname }}</a></li>
                                 </ul>
                             {% endfor %}
                         </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-5">
+                  <div class="card line-chart-example">
+                    <div class="card-header d-flex align-items-center">
+                      <h4>Bar Chart Example</h4>
+                    </div>
+                    <div class="card-body">
+                      <canvas id="barChartExample">{{ temp }}/{{ humidity }}</canvas>
                     </div>
                   </div>
                 </div>
@@ -47,7 +57,7 @@
                             <h5>Type of device connected</h5>
                         </div>
                         <!-- Pie Chart-->
-                        <div class="pie-chart">
+                        <div class="pie-chart card-body">
                             <canvas id="pieChart" width="300" height="300">{{ dev }}.{{ count_dev }}</canvas>
                         </div>
                     </div>
